--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Rommel Castro",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.12.0",
     "classnames": "^2.2.5",
     "express": "^4.13.4",
     "react": "^15.1.0",
